# agent-tooling

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: ci.yml  gitleaks.toml
.github/workflows/: ci.yml  release-cross-os.yml  sensitive-scan.yml
context/: excel-workbook-sync-review.md  state.md
crates/architect-core/: Cargo.toml
crates/architect-core/src/: anchor_suggest.rs  cache.rs  check.rs  cli.rs  dockerfile.rs  fetch.rs  generator.rs  heuristics.rs  knowledge.rs  lib.rs  output_check.rs  policy.rs  render.rs  verify.rs  yaml_merge.rs
crates/architect-core/tests/: golden_pipeline.rs
crates/architect-core/tests/golden/compose_bind_mount_skip/: expected.patch-plan.json
crates/architect-core/tests/golden/compose_dual/: expected.anchored.yaml
crates/architect-core/tests/golden/compose_malformed_init_sidecar/cache/: image-profiles.json
crates/architect-core/tests/golden/dockerfile_enforcing/: expected.hardened.Dockerfile
crates/architect-core/tests/golden/swarm_balanced/: expected.anchored.yaml  expected.patch-plan.json
crates/docker-architect-compose/: Cargo.toml
crates/docker-architect-compose/tests/: policy_check_exit_code.rs
crates/docker-architect-image/: Cargo.toml
crates/docker-architect-image/tests/: policy_check_exit_code.rs
crates/mpcr/: Cargo.toml
crates/mpcr/src/: artifacts.rs  fullcycle_plan.rs  id.rs  metrics.rs  policy_store.rs  router.rs  session.rs
crates/mpcr/tests/: banned_family.rs  e2e_cli.rs  session_recursive.rs  skill_surface.rs
crates/render-table/: Cargo.toml
crates/render-table/src/: main.rs
githooks/: pre-push
packaging/: skills.toml
plugins/code-review/.claude-plugin/: plugin.json
plugins/code-review/.codex-plugin/: plugin.json
plugins/docker-architect/.claude-plugin/: plugin.json
plugins/docker-architect/.codex-plugin/: plugin.json
plugins/espanso-dynamic-forms/.claude-plugin/: plugin.json
plugins/espanso-dynamic-forms/.codex-plugin/: plugin.json
plugins/excel-foundry/.claude-plugin/: plugin.json
plugins/excel-foundry/.codex-plugin/: plugin.json
plugins/friction-diagnostics/.claude-plugin/: plugin.json
plugins/friction-diagnostics/.codex-plugin/: plugin.json
plugins/goal-foundry/: AGENTS.snippet.md  README.md  REVIEW.md
plugins/goalspec/: README.md
scripts/: common.sh  install-all  maintenance.sh  package_skills.py  plugin_port.py  render-table.sh  rust-shim-template.sh  setup.sh
scripts/tests/: smoke-render-table.sh  test_install_all.py  test_package_skills.py  test_plugin_port.py  test_plugin_port_live.py  test_render_table.py
skills/apply-code-review/: SKILL.md
skills/apply-code-review/scripts/mpcr-src/: Cargo.toml
skills/apply-code-review/scripts/mpcr-src/src/: id.rs  lock.rs  main.rs  paths.rs  session.rs
skills/apply-code-review/scripts/mpcr-src/tests/: banned_family.rs  mp_cli.rs  mp_code_review.rs
skills/code-review/: SKILL.md
skills/docker-architect/: SKILL.md
skills/espanso-dynamic-forms/: SKILL.md
skills/excel-foundry/: DEVELOPMENT.md  README.md  SKILL.md
skills/excel-workbook-sync/: README.md  SKILL.md
skills/friction-diagnostics/: README.md  SKILL.md  friction-event-schema.json  manifest.txt
skills/gitops-workflow/: SKILL.md
skills/perform-code-review/: SKILL.md
skills/playwright-testing/: SKILL.md
skills/principal-architect-tooling/: Cargo.toml
skills/principal-containerization-architect/: SKILL.md
skills/principal-containerization-architect/scripts/pca-src/: Cargo.toml
skills/principal-containerization-architect/scripts/pca-src/src/: cache.rs  check.rs  cli.rs  error.rs  extract.rs  fetch.rs  lib.rs  main.rs  render.rs
skills/principal-image-architecture-supply-chain-security-architect/: SKILL.md
skills/project-harness/: SKILL.md
skills/rust-development/: SKILL.md
skills/skill-auditor/: ARCHITECTURE-PLAN.md  SKILL.md
(+795 files in other folders)
