[package]
name = "architect-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
# Cross-process exclusive file locking (maintenance-only crate, stable API surface).
fs2 = "0.4.3"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
url = "2.5.4"

[dev-dependencies]
tempfile = "3.15.0"
