[package]
name = "mpcr"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mpcr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

[dev-dependencies]
tempfile = "3.10"

[workspace]
