[package]
name = "mpcr"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mpcr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true

[workspace]

[workspace.lints.rust]
unsafe_code = "forbid"

# Unused/dead code hygiene (be explicit so it applies even if defaults change)
unused_imports = "warn"
unused_variables = "warn"
unused_mut = "warn"
unused_must_use = "warn"
dead_code = "warn"
unreachable_pub = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
# Broad non-idiomatic coverage (warn-by-default groups). With `-D warnings`, these become errors.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }   # strict + opinionated; expect to allow some lints
nursery = { level = "warn", priority = -1 }    # experimental; cherry-pick or allow as needed
cargo = { level = "warn", priority = -1 }

# Explicit non-idiomatic bans (restriction-style lints)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
dbg_macro = "deny"
indexing_slicing = "deny"
panic_in_result_fn = "deny"
print_stdout = "deny"
print_stderr = "deny"
